# model-checker

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
data/: combination.aag  combination_delayed.aag  combinatorial_sat.aag  combinatorial_unsat.aag  count10.aag  count10_3rd_bit_off.aag  count10_3rd_bit_on.aag  counter_6bit.aag  flop.aag  lock_5.aag  multi_input_alternating.aag  multi_input_puzzle.aag  one_shot.aag  safe.aag  saturating_counter_10bit.aag  saturating_counter_6bit.aag
data/aig/: combination.aig  combination_delayed.aig  count10.aig
minisat/core/: Solver.or
minisat/mtl/: template.mk
minisat/utils/: Options.or  System.or
src/: bmc.rs  interop.rs  main.rs  minisat.rs
src/bmc/: aiger.rs  debug.rs  mod.rs  model.rs
src/logic/: mod.rs  resolution.rs  solving.rs  types.rs
src/logic/minisat/: Main.C  Makefile  Proof.C  Stub.C  Stub.h
src/minisat/: Api.C  Api.h  Main.C  Makefile_staticlib  Proof.C  Proof.h  README  Test.C  Test.h
