[package]
name = "model-checker"
version = "2.1.1"
edition = "2024"
authors = ["Johannes Riedmann"]
links = ""

[[bin]]
name = "bmc"
path = "src/main.rs"

[dependencies]
cxx = "1.0"
clap = { version = "4.5.57", features = ["derive"] }
thiserror = "2.0.18"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints.clippy]
