[package]
name = "model-checker"
version = "3.0.0"
edition = "2024"
authors = ["Johannes Riedmann"]
links = ""

[[bin]]
name = "bmc"
path = "src/main.rs"

[dependencies]
cxx = "1.0"
clap = { version = "4.5.57", features = ["derive"] }
thiserror = "2.0.18"
sysinfo = "0.38.2"

[build-dependencies]
cxx-build = "1.0"

[lints.clippy]
